--- a/index.html
+++ b/index.html
@@ -175,45 +175,89 @@
 
   </div>
 	
+<!-- Force External Browser Fallback UI -->
+<div id="externalBrowserOverlay" 
+     style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.92);
+     color:white; z-index:9999999; padding:25px; text-align:center; font-family:sans-serif;">
+  
+  <h2 style="font-size:26px; margin-bottom:10px;">Open in Your Browser</h2>
+  <p style="font-size:18px; line-height:1.6; margin-bottom:20px;">
+    This app’s built-in browser can’t open this page correctly.<br>
+    Please tap the menu (<b>⋯</b> or <b>…</b>) and choose:
+  </p>
+
+  <p style="font-size:22px; font-weight:bold; color:#00e0ff;">
+    “Open in Browser”
+  </p>
+
+  <p style="margin-top:25px; font-size:16px; opacity:0.8;">
+    This will open the page in Safari / Chrome automatically.
+  </p>
+</div>
+
 <script>
-// Detect if visitor is inside an in-app browser (TikTok, IG, FB, X)
+// -------------------------------------------
+//    UNIVERSAL IN-APP BROWSER ESCAPE ENGINE
+// -------------------------------------------
+
+// Detect TikTok / Instagram / Facebook / X / Snapchat WebViews
 function isInAppBrowser() {
   const ua = navigator.userAgent || navigator.vendor || window.opera;
-
   return (
-    ua.includes("FBAN") || ua.includes("FBAV") || // Facebook
-    ua.includes("Instagram") ||                   // Instagram
-    ua.includes("Line/") ||                       // Line
-    ua.includes("Twitter") ||                     // X/Twitter
-    ua.includes("TikTok") ||                      // TikTok
-    ua.includes("Snapchat") ||                    // Snap
-    ua.includes("Messenger")                      // Messenger
+    ua.includes("TikTok") ||
+    ua.includes("Instagram") ||
+    ua.includes("FBAN") ||
+    ua.includes("FBAV") ||
+    ua.includes("Messenger") ||
+    ua.includes("Twitter") ||
+    ua.includes("Snapchat") ||
+    ua.includes("Line/") ||
+    ua.includes("Pinterest")
   );
 }
 
-// Attempt to force opening in default browser
-function openExternally(url) {
-  // Best attempt: open using _blank window
-  const win = window.open(url, "_blank");
-
-  // If popup blocked (common in WebViews), show instructions
-  if (!win) {
-    document.getElementById("openBrowserNotice").style.display = "flex";
+// Attempt to escape automatically using the Share→Browser trick
+async function tryExternalOpen(url) {
+  try {
+    // Works on TikTok / IG / Facebook when allowed
+    await navigator.share({ title: "Open", url: url });
+    return true; // Browser opened
+  } catch (e) {
+    // If share fails or is blocked, we fallback
+    return false;
   }
 }
 
-// Override link behavior on in-app browsers
-document.addEventListener("DOMContentLoaded", function () {
-  const link = document.querySelector(".socialmedialink");
+function showOverlay() {
+  document.getElementById("externalBrowserOverlay").style.display = "flex";
+}
 
-  link.addEventListener("click", function (e) {
-    if (isInAppBrowser()) {
-      e.preventDefault();
-      openExternally("https://links.tillymae.bio");
+document.addEventListener("DOMContentLoaded", function () {
+
+  // Attach safe click-handler to your link
+  const linkEl = document.querySelector(".socialmedialink");
+  const targetURL = "https://links.tillymae.bio";
+
+  linkEl.addEventListener("click", async function (e) {
+    if (!isInAppBrowser()) {
+      // Normal browser → behave normally
+      return;
     }
+
+    // Inside TikTok/IG/etc.
+    e.preventDefault();
+
+    // 1️⃣ Attempt auto-escape
+    const success = await tryExternalOpen(targetURL);
+
+    if (success) return; // Opened in real browser
+
+    // 2️⃣ Auto-escape blocked → show overlay instructions
+    showOverlay();
   });
 });
 </script>
+
 
 <div id="openBrowserNotice"
      style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.8);
