--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <meta name="theme-color" content="#000000"/>
 <meta name="msapplication-navbutton-color" content="#000000"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="#000000"/>
+<meta http-equiv="X-Frame-Options" content="deny">
 	
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
