--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 <meta charSet="utf-8" data-next-head=""/>
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" data-next-head=""/>
-<link rel="icon" href="/images/favicon.ico" data-next-head=""/>
+<link rel="icon" href="/favicon.webp" data-next-head=""/>
+<meta http-equiv="X-Frame-Options" content="DENY">
+<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
+	
 <meta name="themeName" content="dark" data-next-head=""/>
 <meta http-equiv="x-dns-prefetch-control" content="on" data-next-head=""/>
 <title data-next-head="">Check out Tilly Mae (@tillymae)</title>
@@ -14,34 +17,32 @@
 <meta property="og:url" content="https://tillymae.bio" data-next-head=""/>
 <meta property="og:site_name" content="Tilly Mae" data-next-head=""/>
 <meta property="og:type" content="website" data-next-head=""/>
-<meta property="og:image" content="/images/og-user-profile.jpeg" data-next-head=""/>
+<meta property="og:image" content="images/og-user-profile.jpeg" data-next-head=""/>
 <meta property="og:image:alt" content="Check out Tilly Mae (@tillymae)" data-next-head=""/>
 <meta http-equiv="x-ua-compatible" content="IE=edge"/>
 <meta name="application-name" content="Tilly Mae"/>
 <meta name="theme-color" content="#000000"/>
 <meta name="msapplication-navbutton-color" content="#000000"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="#000000"/>
-<meta http-equiv="X-Frame-Options" content="deny">
-	
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-	
-<link rel="preload" as="image" href="/images/instagram.png" fetchpriority="high">
-<link rel="preload" as="image" href="/images/x.png" fetchpriority="high">
-<link rel="preload" as="image" href="/images/facebook.png" fetchpriority="high">
-<link rel="preload" as="image" href="/images/tiktok.png" fetchpriority="high">
-<link rel="preload" as="image" href="/images/external-links.jpeg" fetchpriority="high">
-<link rel="preload" as="image" href="/images/user-profile-1.jpeg" fetchpriority="high">
-<link rel="preload" as="image" href="/images/user-profile.jpeg" fetchpriority="high">
-<link rel="preload" as="image" href="/images/tiktok-link.jpeg" fetchpriority="high">
-<link rel="preload" as="image" href="/images/x-link.jpeg" fetchpriority="high">
-<link rel="preload" as="image" href="/images/facebook-link.jpeg" fetchpriority="high">
-<link rel="preload" as="image" href="/images/instagram-link.jpeg" fetchpriority="high">
+
+<link rel="preload" as="image" href="images/instagram.png" fetchpriority="high">
+<link rel="preload" as="image" href="images/x.png" fetchpriority="high">
+<link rel="preload" as="image" href="images/facebook.png" fetchpriority="high">
+<link rel="preload" as="image" href="images/tiktok.png" fetchpriority="high">
+<link rel="preload" as="image" href="images/external-links.jpeg" fetchpriority="high">
+<link rel="preload" as="image" href="images/user-profile-1.jpeg" fetchpriority="high">
+<link rel="preload" as="image" href="images/user-profile.jpeg" fetchpriority="high">
+<link rel="preload" as="image" href="images/tiktok-link.jpeg" fetchpriority="high">
+<link rel="preload" as="image" href="images/x-link.jpeg" fetchpriority="high">
+<link rel="preload" as="image" href="images/facebook-link.jpeg" fetchpriority="high">
+<link rel="preload" as="image" href="images/instagram-link.jpeg" fetchpriority="high">
 
 <link rel="stylesheet" href="css/main.css" data-n-g=""/>
-
 </head>
 	
 	
